--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "NODE_ENV=production node ./bin/www",
     "dev": "DEBUG=webapp-backend:* nodemon ./bin/www",
     "test": "NODE_ENV=test mocha ./test/index.js --exit",
     "lint": "eslint ./ --fix"
