--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hapi/joi": "^16.1.7",
     "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "debug": "^4.1.1",
     "delay": "^4.3.0",
     "dotenv": "^8.2.0",
