--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
-    "express-jwt-permissions": "^1.3.1",
+    "express-jwt-permissions": "^1.3.2",
+    "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
