--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "express-jwt-blacklist": "^1.1.0",
     "express-jwt-permissions": "^1.3.2",
     "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
