--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "datejs": "^1.0.0-rc3",
     "debug": "^4.1.1",
     "delay": "^4.3.0",
     "dotenv": "^8.2.0",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
     "morgan": "^1.9.1",
+    "uuid": "^3.3.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
